kubernetes/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: mtapp
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: postgres
